--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="drawer-hook"></div>
+  <div id="backdrop-hook"></div>
   <div id="root"></div>
+
 </body>
 
 </html>
